backend/auth/deployments/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  labels:
    name: ingress-service
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: ticketing.dev
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: auth-service
            port: 
              number: 3000
